# powermodes

./: .gitignore  .pylintrc  Development.md  Doxyfile  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  make.sh
powermodes/: __init__.py  arguments.py  config.py  configloader.py  error.py  input.py  interactivemode.py  main.py  plugin.py  pluginloader.py  pluginutils.py  utils.py
powermodes/plugins/: __init__.py  command.md  command.py  intelepb.md  intelepb.py  intelpstate.py  nmiwatchdog.md  nmiwatchdog.py
